[gd_scene load_steps=4 format=3 uid="uid://cjrhhxq1x7n8r"]

[ext_resource type="Script" uid="uid://8j5fxpx5tefq" path="res://sources/language_tool/fish_word_list.gd" id="1_bdlmx"]
[ext_resource type="PackedScene" uid="uid://clf3v6355wond" path="res://sources/language_tool/list_title.tscn" id="1_mlni4"]
[ext_resource type="Script" uid="uid://c45af60t46e6n" path="res://sources/language_tool/ScrollContainer.gd" id="2_okviq"]

[node name="FishWordList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bdlmx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ListTitle" parent="VBoxContainer" instance=ExtResource("1_mlni4")]
layout_mode = 2

[node name="TitleLabel" parent="VBoxContainer/ListTitle/HBoxContainer/MarginContainer" index="0"]
text = "Pseudowords List"

[node name="MarginContainer" parent="VBoxContainer/ListTitle/HBoxContainer/HBoxContainer" index="0"]
visible = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2

[node name="Word" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 100
text = "Word
"
horizontal_alignment = 1

[node name="PseudoWord" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 100
text = "Pseudoword"
horizontal_alignment = 1

[node name="Type" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1
theme_override_font_sizes/font_size = 100
text = "Lesson"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_okviq")

[node name="ElementsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60

[connection signal="add_pressed" from="VBoxContainer/ListTitle" to="." method="_on_list_title_add_pressed"]
[connection signal="back_pressed" from="VBoxContainer/ListTitle" to="." method="_on_list_title_back_pressed"]
[connection signal="new_search" from="VBoxContainer/ListTitle" to="." method="_on_list_title_new_search"]
[connection signal="save_pressed" from="VBoxContainer/ListTitle" to="." method="_on_list_title_save_pressed"]

[editable path="VBoxContainer/ListTitle"]
[editable path="VBoxContainer/ListTitle/HBoxContainer/HBoxContainer/SaveButton"]
[editable path="VBoxContainer/ListTitle/HBoxContainer/HBoxContainer/BackButton"]
